# paper-network-auth

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac
.github/workflows/: latex.yaml
aclocal/latex-m4/: ac_latex_packages.m4
docs/: README.md
paper/: README.md  mybib.bib  paper.tex
paper/code/: README.md  ansible-auth.txt  container-krb  keytabs  kinit-session  krb-dns-2  krb-dns.txt  krb5.conf  kt.txt  ldap-sasl  nsswitch.conf  ssh-config  ssh-session
paper/frontmatter/: title.aux  title.tex
paper_v0.1/: README.md  network_auth.docx  network_auth.odt  paper.tex
paper_v0.2/: README.md
